Lavorazione volta all'utilizzazione dei generics.